--- a/examples/STARS_fusion_example.ipynb
+++ b/examples/STARS_fusion_example.ipynb
@@ -4,7 +4,51 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ArgumentError",
+     "evalue": "ArgumentError: Package STARS not found in current path.\n- Run `import Pkg; Pkg.add(\"STARS\")` to install the STARS package.",
+     "output_type": "error",
+     "traceback": [
+      "ArgumentError: Package STARS not found in current path.\n",
+      "- Run `import Pkg; Pkg.add(\"STARS\")` to install the STARS package.\n",
+      "\n",
+      "Stacktrace:\n",
+      "  [1] macro expansion\n",
+      "    @ ./loading.jl:2296 [inlined]\n",
+      "  [2] macro expansion\n",
+      "    @ ./lock.jl:273 [inlined]\n",
+      "  [3] __require(into::Module, mod::Symbol)\n",
+      "    @ Base ./loading.jl:2271\n",
+      "  [4] #invoke_in_world#3\n",
+      "    @ ./essentials.jl:1089 [inlined]\n",
+      "  [5] invoke_in_world\n",
+      "    @ ./essentials.jl:1086 [inlined]\n",
+      "  [6] require(into::Module, mod::Symbol)\n",
+      "    @ Base ./loading.jl:2260\n",
+      "  [7] eval\n",
+      "    @ ./boot.jl:430 [inlined]\n",
+      "  [8] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)\n",
+      "    @ Base ./loading.jl:2734\n",
+      "  [9] #invokelatest#2\n",
+      "    @ ./essentials.jl:1055 [inlined]\n",
+      " [10] invokelatest\n",
+      "    @ ./essentials.jl:1052 [inlined]\n",
+      " [11] (::VSCodeServer.var\"#217#218\"{VSCodeServer.NotebookRunCellArguments, String})()\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.127.2/scripts/packages/VSCodeServer/src/serve_notebook.jl:24\n",
+      " [12] withpath(f::VSCodeServer.var\"#217#218\"{VSCodeServer.NotebookRunCellArguments, String}, path::String)\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.127.2/scripts/packages/VSCodeServer/src/repl.jl:276\n",
+      " [13] notebook_runcell_request(conn::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint}, params::VSCodeServer.NotebookRunCellArguments)\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.127.2/scripts/packages/VSCodeServer/src/serve_notebook.jl:13\n",
+      " [14] dispatch_msg(x::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint}, dispatcher::VSCodeServer.JSONRPC.MsgDispatcher, msg::Dict{String, Any})\n",
+      "    @ VSCodeServer.JSONRPC ~/.vscode/extensions/julialang.language-julia-1.127.2/scripts/packages/JSONRPC/src/typed.jl:67\n",
+      " [15] serve_notebook(pipename::String, debugger_pipename::String, outputchannel_logger::Base.CoreLogging.SimpleLogger; error_handler::var\"#5#10\"{String})\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.127.2/scripts/packages/VSCodeServer/src/serve_notebook.jl:147\n",
+      " [16] top-level scope\n",
+      "    @ ~/.vscode/extensions/julialang.language-julia-1.127.2/scripts/notebook/notebook.jl:35"
+     ]
+    }
+   ],
    "source": [
     "using Dates\n",
     "using Rasters\n",
@@ -13,7 +57,7 @@
     "using STARS.sentinel_tiles\n",
     "using STARS.HLS\n",
     "using STARS.VNP43\n",
-    "using STARS.STARS\n",
+    "using STARS.STARSDataFusion\n",
     "using LinearAlgebra\n",
     "using Plots"
    ]
@@ -8922,15 +8966,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.10.4",
+   "display_name": "Julia 1.11.4",
    "language": "julia",
-   "name": "julia-1.10"
+   "name": "julia-1.11"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.10.4"
+   "version": "1.11.4"
   }
  },
  "nbformat": 4,
